// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`export-named-declarations snapshot 1`] = `
{
  "declarations": {
    "classes": [
      {
        "constructors": [],
        "docs": [
          "/**
 * Class001
 */",
        ],
        "id": "Class001",
        "isAbstract": false,
        "kind": "ClassDeclaration",
        "members": {
          "methods": [],
          "properties": [],
        },
        "name": "Class001",
        "signature": "class Class001 {}",
        "source": {
          "filename": "classes.ts",
          "line": 4,
          "unpkgURL": undefined,
          "url": undefined,
        },
      },
      {
        "constructors": [],
        "docs": [],
        "id": "Class002",
        "isAbstract": false,
        "kind": "ClassDeclaration",
        "members": {
          "methods": [],
          "properties": [],
        },
        "name": "Class002",
        "signature": "class Class002 extends Class001 {}",
        "source": {
          "filename": "classes.ts",
          "line": 6,
          "unpkgURL": undefined,
          "url": undefined,
        },
      },
      {
        "constructors": [],
        "docs": [],
        "id": "Class003",
        "isAbstract": true,
        "kind": "ClassDeclaration",
        "members": {
          "methods": [],
          "properties": [],
        },
        "name": "Class003",
        "signature": "abstract class Class003 {}",
        "source": {
          "filename": "classes.ts",
          "line": 8,
          "unpkgURL": undefined,
          "url": undefined,
        },
      },
      {
        "constructors": [],
        "docs": [],
        "id": "Class004",
        "isAbstract": false,
        "kind": "ClassDeclaration",
        "members": {
          "methods": [],
          "properties": [],
        },
        "name": "Class004",
        "signature": "class Class004 implements A, B {}",
        "source": {
          "filename": "classes.ts",
          "line": 13,
          "unpkgURL": undefined,
          "url": undefined,
        },
      },
      {
        "constructors": [],
        "docs": [],
        "id": "Class005",
        "isAbstract": false,
        "kind": "ClassDeclaration",
        "members": {
          "methods": [],
          "properties": [],
        },
        "name": "Class005",
        "signature": "class Class005 extends Class003 implements A, B {}",
        "source": {
          "filename": "classes.ts",
          "line": 15,
          "unpkgURL": undefined,
          "url": undefined,
        },
      },
      {
        "constructors": [],
        "docs": [],
        "id": "Class006",
        "isAbstract": false,
        "kind": "ClassDeclaration",
        "members": {
          "methods": [],
          "properties": [],
        },
        "name": "Class006",
        "signature": "class Class006<T> {}",
        "source": {
          "filename": "classes.ts",
          "line": 18,
          "unpkgURL": undefined,
          "url": undefined,
        },
      },
      {
        "constructors": [],
        "docs": [],
        "id": "Class007",
        "isAbstract": false,
        "kind": "ClassDeclaration",
        "members": {
          "methods": [],
          "properties": [],
        },
        "name": "Class007",
        "signature": "class Class007<T extends object, U, V extends keyof T>
    extends Class003
    implements A, B {}",
        "source": {
          "filename": "classes.ts",
          "line": 20,
          "unpkgURL": undefined,
          "url": undefined,
        },
      },
      {
        "constructors": [
          {
            "docs": [
              "/** Constructor */",
            ],
            "id": "Class008.0-constructor",
            "kind": "ClassConstructorDeclaration",
            "name": "constructor",
            "signature": "constructor(foo: any, bar: any);",
            "source": {
              "filename": "classes.ts",
              "line": 25,
              "unpkgURL": undefined,
              "url": undefined,
            },
          },
          {
            "docs": [],
            "id": "Class008.1-constructor",
            "kind": "ClassConstructorDeclaration",
            "name": "constructor",
            "signature": "constructor(foo: string, bar: number);",
            "source": {
              "filename": "classes.ts",
              "line": 26,
              "unpkgURL": undefined,
              "url": undefined,
            },
          },
        ],
        "docs": [],
        "id": "Class008",
        "isAbstract": false,
        "kind": "ClassDeclaration",
        "members": {
          "methods": [],
          "properties": [],
        },
        "name": "Class008",
        "signature": "class Class008 {}",
        "source": {
          "filename": "classes.ts",
          "line": 23,
          "unpkgURL": undefined,
          "url": undefined,
        },
      },
      {
        "constructors": [
          {
            "docs": [],
            "id": "Class009.0-constructor",
            "kind": "ClassConstructorDeclaration",
            "name": "constructor",
            "signature": "protected constructor(foo: string, bar: number);",
            "source": {
              "filename": "classes.ts",
              "line": 33,
              "unpkgURL": undefined,
              "url": undefined,
            },
          },
        ],
        "docs": [],
        "id": "Class009",
        "isAbstract": false,
        "kind": "ClassDeclaration",
        "members": {
          "methods": [],
          "properties": [],
        },
        "name": "Class009",
        "signature": "class Class009 {}",
        "source": {
          "filename": "classes.ts",
          "line": 32,
          "unpkgURL": undefined,
          "url": undefined,
        },
      },
      {
        "constructors": [],
        "docs": [],
        "id": "Class010",
        "isAbstract": false,
        "kind": "ClassDeclaration",
        "members": {
          "methods": [],
          "properties": [],
        },
        "name": "Class010",
        "signature": "class Class010 {}",
        "source": {
          "filename": "classes.ts",
          "line": 39,
          "unpkgURL": undefined,
          "url": undefined,
        },
      },
      {
        "constructors": [],
        "docs": [],
        "id": "Class011",
        "isAbstract": false,
        "kind": "ClassDeclaration",
        "members": {
          "methods": [
            {
              "docs": [
                "/** Bar */",
              ],
              "id": "Class011.bar",
              "isStatic": true,
              "kind": "ClassMethodDeclaration",
              "name": "bar",
              "signature": "static bar: () => number;",
              "source": {
                "filename": "classes.ts",
                "line": 53,
                "unpkgURL": undefined,
                "url": undefined,
              },
              "type": "() => number",
            },
          ],
          "properties": [
            {
              "docs": [
                "/** Get bat */",
              ],
              "id": "Class011.bat",
              "isStatic": true,
              "kind": "ClassPropertyDeclaration",
              "name": "bat",
              "signature": "static readonly bat: string;",
              "source": {
                "filename": "classes.ts",
                "line": 69,
                "unpkgURL": undefined,
                "url": undefined,
              },
              "type": "string",
            },
            {
              "docs": [
                "/** Get baz */",
              ],
              "id": "Class011.baz",
              "isStatic": true,
              "kind": "ClassPropertyDeclaration",
              "name": "baz",
              "signature": "static baz: number;",
              "source": {
                "filename": "classes.ts",
                "line": 58,
                "unpkgURL": undefined,
                "url": undefined,
              },
              "type": "number",
            },
            {
              "docs": [
                "/** Foo */",
              ],
              "id": "Class011.foo",
              "isStatic": true,
              "kind": "ClassPropertyDeclaration",
              "name": "foo",
              "signature": "static readonly foo: string;",
              "source": {
                "filename": "classes.ts",
                "line": 50,
                "unpkgURL": undefined,
                "url": undefined,
              },
              "type": "string",
            },
          ],
        },
        "name": "Class011",
        "signature": "class Class011 {}",
        "source": {
          "filename": "classes.ts",
          "line": 46,
          "unpkgURL": undefined,
          "url": undefined,
        },
      },
      {
        "constructors": [],
        "docs": [],
        "id": "Class012",
        "isAbstract": false,
        "kind": "ClassDeclaration",
        "members": {
          "methods": [
            {
              "docs": [
                "/** Bar */",
              ],
              "id": "Class012.bar",
              "isStatic": false,
              "kind": "ClassMethodDeclaration",
              "name": "bar",
              "signature": "bar: () => number;",
              "source": {
                "filename": "classes.ts",
                "line": 84,
                "unpkgURL": undefined,
                "url": undefined,
              },
              "type": "() => number",
            },
          ],
          "properties": [
            {
              "docs": [
                "/** Get bat */",
              ],
              "id": "Class012.bat",
              "isStatic": false,
              "kind": "ClassPropertyDeclaration",
              "name": "bat",
              "signature": "readonly bat: string;",
              "source": {
                "filename": "classes.ts",
                "line": 100,
                "unpkgURL": undefined,
                "url": undefined,
              },
              "type": "string",
            },
            {
              "docs": [
                "/** Get baz */",
              ],
              "id": "Class012.baz",
              "isStatic": false,
              "kind": "ClassPropertyDeclaration",
              "name": "baz",
              "signature": "baz: number;",
              "source": {
                "filename": "classes.ts",
                "line": 89,
                "unpkgURL": undefined,
                "url": undefined,
              },
              "type": "number",
            },
            {
              "docs": [
                "/** Foo */",
              ],
              "id": "Class012.foo",
              "isStatic": false,
              "kind": "ClassPropertyDeclaration",
              "name": "foo",
              "signature": "readonly foo: string;",
              "source": {
                "filename": "classes.ts",
                "line": 78,
                "unpkgURL": undefined,
                "url": undefined,
              },
              "type": "string",
            },
            {
              "docs": [
                "/** Foobar */",
              ],
              "id": "Class012.foobar",
              "isStatic": false,
              "kind": "ClassPropertyDeclaration",
              "name": "foobar",
              "signature": "foobar?: string;",
              "source": {
                "filename": "classes.ts",
                "line": 81,
                "unpkgURL": undefined,
                "url": undefined,
              },
              "type": "string",
            },
          ],
        },
        "name": "Class012",
        "signature": "class Class012 {}",
        "source": {
          "filename": "classes.ts",
          "line": 74,
          "unpkgURL": undefined,
          "url": undefined,
        },
      },
      {
        "constructors": [
          {
            "docs": [],
            "id": "Class013.0-constructor",
            "kind": "ClassConstructorDeclaration",
            "name": "constructor",
            "signature": "constructor(
    foo?: string,
    bar: string,
    baz: string,
    qux: string,
    ...rest: number[]
);",
            "source": {
              "filename": "classes.ts",
              "line": 106,
              "unpkgURL": undefined,
              "url": undefined,
            },
          },
        ],
        "docs": [],
        "id": "Class013",
        "isAbstract": false,
        "kind": "ClassDeclaration",
        "members": {
          "methods": [],
          "properties": [
            {
              "docs": [
                "/** Bar */",
              ],
              "id": "Class013.bar",
              "isStatic": false,
              "kind": "ClassPropertyDeclaration",
              "name": "bar",
              "signature": "protected readonly bar: string;",
              "source": {
                "filename": "classes.ts",
                "line": 110,
                "unpkgURL": undefined,
                "url": undefined,
              },
              "type": "string",
            },
            {
              "docs": [
                "/** Foo */",
              ],
              "id": "Class013.foo",
              "isStatic": false,
              "kind": "ClassPropertyDeclaration",
              "name": "foo",
              "signature": "readonly foo: string;",
              "source": {
                "filename": "classes.ts",
                "line": 108,
                "unpkgURL": undefined,
                "url": undefined,
              },
              "type": "string",
            },
          ],
        },
        "name": "Class013",
        "signature": "class Class013 {}",
        "source": {
          "filename": "classes.ts",
          "line": 105,
          "unpkgURL": undefined,
          "url": undefined,
        },
      },
      {
        "constructors": [],
        "docs": [],
        "id": "Class014",
        "isAbstract": true,
        "kind": "ClassDeclaration",
        "members": {
          "methods": [
            {
              "docs": [
                "/** Baz */",
              ],
              "id": "Class014.baz",
              "isStatic": false,
              "kind": "ClassMethodDeclaration",
              "name": "baz",
              "signature": "abstract baz: () => number;",
              "source": {
                "filename": "classes.ts",
                "line": 125,
                "unpkgURL": undefined,
                "url": undefined,
              },
              "type": "() => number",
            },
          ],
          "properties": [
            {
              "docs": [
                "/** Bar */",
              ],
              "id": "Class014.bar",
              "isStatic": false,
              "kind": "ClassPropertyDeclaration",
              "name": "bar",
              "signature": "protected abstract bar: string;",
              "source": {
                "filename": "classes.ts",
                "line": 122,
                "unpkgURL": undefined,
                "url": undefined,
              },
              "type": "string",
            },
            {
              "docs": [
                "/** Foo */",
              ],
              "id": "Class014.foo",
              "isStatic": false,
              "kind": "ClassPropertyDeclaration",
              "name": "foo",
              "signature": "abstract foo: string;",
              "source": {
                "filename": "classes.ts",
                "line": 119,
                "unpkgURL": undefined,
                "url": undefined,
              },
              "type": "string",
            },
          ],
        },
        "name": "Class014",
        "signature": "abstract class Class014 {}",
        "source": {
          "filename": "classes.ts",
          "line": 117,
          "unpkgURL": undefined,
          "url": undefined,
        },
      },
      {
        "constructors": [],
        "docs": [],
        "id": "Class016",
        "isAbstract": false,
        "kind": "ClassDeclaration",
        "members": {
          "methods": [],
          "properties": [],
        },
        "name": "Class016",
        "signature": "class Class016 {}",
        "source": {
          "filename": "classes.ts",
          "line": 131,
          "unpkgURL": undefined,
          "url": undefined,
        },
      },
    ],
    "enums": [
      {
        "docs": [
          "/**
 * Enum1
 */",
        ],
        "id": "Enum1",
        "isConst": true,
        "kind": "EnumDeclaration",
        "members": [
          {
            "docs": [],
            "id": "Enum1.No",
            "kind": "EnumMemberDeclaration",
            "name": "No",
            "signature": "No",
            "source": {
              "filename": "enums.ts",
              "line": 7,
              "unpkgURL": undefined,
              "url": undefined,
            },
            "value": 1,
          },
          {
            "docs": [
              "/** Positive */",
            ],
            "id": "Enum1.Yes",
            "kind": "EnumMemberDeclaration",
            "name": "Yes",
            "signature": "Yes",
            "source": {
              "filename": "enums.ts",
              "line": 6,
              "unpkgURL": undefined,
              "url": undefined,
            },
            "value": 0,
          },
        ],
        "name": "Enum1",
        "signature": "const enum Enum1 {
    Yes,
    No,
}",
        "source": {
          "filename": "enums.ts",
          "line": 4,
          "unpkgURL": undefined,
          "url": undefined,
        },
      },
      {
        "docs": [],
        "id": "Enum2",
        "isConst": false,
        "kind": "EnumDeclaration",
        "members": [
          {
            "docs": [],
            "id": "Enum2.Ko",
            "kind": "EnumMemberDeclaration",
            "name": "Ko",
            "signature": "Ko",
            "source": {
              "filename": "enums.ts",
              "line": 12,
              "unpkgURL": undefined,
              "url": undefined,
            },
            "value": 2,
          },
          {
            "docs": [],
            "id": "Enum2.Ok",
            "kind": "EnumMemberDeclaration",
            "name": "Ok",
            "signature": "Ok = 1",
            "source": {
              "filename": "enums.ts",
              "line": 11,
              "unpkgURL": undefined,
              "url": undefined,
            },
            "value": 1,
          },
        ],
        "name": "Enum2",
        "signature": "enum Enum2 {
    Ok = 1,
    Ko,
}",
        "source": {
          "filename": "enums.ts",
          "line": 10,
          "unpkgURL": undefined,
          "url": undefined,
        },
      },
      {
        "docs": [],
        "id": "Enum3",
        "isConst": false,
        "kind": "EnumDeclaration",
        "members": [
          {
            "docs": [],
            "id": "Enum3.A",
            "kind": "EnumMemberDeclaration",
            "name": "A",
            "signature": "A = 'A'",
            "source": {
              "filename": "enums.ts",
              "line": 16,
              "unpkgURL": undefined,
              "url": undefined,
            },
            "value": "A",
          },
          {
            "docs": [],
            "id": "Enum3.B",
            "kind": "EnumMemberDeclaration",
            "name": "B",
            "signature": "B = 'B'",
            "source": {
              "filename": "enums.ts",
              "line": 17,
              "unpkgURL": undefined,
              "url": undefined,
            },
            "value": "B",
          },
          {
            "docs": [],
            "id": "Enum3.C",
            "kind": "EnumMemberDeclaration",
            "name": "C",
            "signature": "C = 'C'",
            "source": {
              "filename": "enums.ts",
              "line": 18,
              "unpkgURL": undefined,
              "url": undefined,
            },
            "value": "C",
          },
        ],
        "name": "Enum3",
        "signature": "enum Enum3 {
    A = 'A',
    B = 'B',
    C = 'C',
}",
        "source": {
          "filename": "enums.ts",
          "line": 15,
          "unpkgURL": undefined,
          "url": undefined,
        },
      },
      {
        "docs": [],
        "id": "Enum4",
        "isConst": false,
        "kind": "EnumDeclaration",
        "members": [],
        "name": "Enum4",
        "signature": "enum Enum4 {}",
        "source": {
          "filename": "enums.ts",
          "line": 23,
          "unpkgURL": undefined,
          "url": undefined,
        },
      },
      {
        "docs": [],
        "id": "Enum6",
        "isConst": false,
        "kind": "EnumDeclaration",
        "members": [
          {
            "docs": [],
            "id": "Enum6.A",
            "kind": "EnumMemberDeclaration",
            "name": "A",
            "signature": "A",
            "source": {
              "filename": "enums.ts",
              "line": 29,
              "unpkgURL": undefined,
              "url": undefined,
            },
            "value": 0,
          },
        ],
        "name": "Enum6",
        "signature": "enum Enum6 {
    A,
}",
        "source": {
          "filename": "enums.ts",
          "line": 28,
          "unpkgURL": undefined,
          "url": undefined,
        },
      },
    ],
    "functions": [
      {
        "docs": [
          "/**
 * Func1 returns the sum of two numbers.
 * @param a - the first number
 * @param b - the second number
 */",
        ],
        "id": "func1",
        "kind": "FunctionDeclaration",
        "name": "func1",
        "signature": "func1: (a: number, b: number) => number;",
        "source": {
          "filename": "functions.ts",
          "line": 6,
          "unpkgURL": undefined,
          "url": undefined,
        },
        "type": "(a: number, b: number) => number",
      },
      {
        "docs": [
          "/**
 * Func2 returns the sum of two numbers.
 * @param a - the first number
 * @param b - the second number
 */",
        ],
        "id": "func2",
        "kind": "FunctionDeclaration",
        "name": "func2",
        "signature": "func2: ({ a, b }: { a: number; b: number }) => number;",
        "source": {
          "filename": "functions.ts",
          "line": 15,
          "unpkgURL": undefined,
          "url": undefined,
        },
        "type": "({ a, b }: { a: number; b: number; }) => number",
      },
      {
        "docs": [
          "/**
 * Func3 returns the sum of two numbers.
 * @param a - the first number
 * @param b - the second number
 */",
        ],
        "id": "func3",
        "kind": "FunctionDeclaration",
        "name": "func3",
        "signature": "func3: ({ a, b }: { a: number; b: number }) => number;",
        "source": {
          "filename": "functions.ts",
          "line": 22,
          "unpkgURL": undefined,
          "url": undefined,
        },
        "type": "({ a, b }: { a: number; b: number; }) => number",
      },
      {
        "docs": [
          "/**
 * Func4 is overloaded and returns its input.
 */",
        ],
        "id": "func4",
        "kind": "FunctionDeclaration",
        "name": "func4",
        "signature": "func4: { (a: number): number; (a: string): string };",
        "source": {
          "filename": "functions.ts",
          "line": 31,
          "unpkgURL": undefined,
          "url": undefined,
        },
        "type": "{ (a: number): number; (a: string): string; }",
      },
      {
        "docs": [],
        "id": "func5",
        "kind": "FunctionDeclaration",
        "name": "func5",
        "signature": "func5: () => Promise<void>;",
        "source": {
          "filename": "functions.ts",
          "line": 37,
          "unpkgURL": undefined,
          "url": undefined,
        },
        "type": "() => Promise<void>",
      },
      {
        "docs": [],
        "id": "func8",
        "kind": "FunctionDeclaration",
        "name": "func8",
        "signature": "func8: (a: string) => number;",
        "source": {
          "filename": "functions.ts",
          "line": 45,
          "unpkgURL": undefined,
          "url": undefined,
        },
        "type": "(a: string) => number",
      },
    ],
    "interfaces": [
      {
        "docs": [
          "/**
 * Interface001
 */",
        ],
        "id": "Interface001",
        "kind": "InterfaceDeclaration",
        "members": {
          "callSignatures": [],
          "constructSignatures": [],
          "indexSignatures": [],
          "methods": [],
          "properties": [
            {
              "docs": [],
              "id": "Interface001.x",
              "isOptional": false,
              "isReadonly": true,
              "kind": "InterfacePropertyDeclaration",
              "name": "x",
              "signature": "readonly x: number;",
              "source": {
                "filename": "interfaces.ts",
                "line": 5,
                "unpkgURL": undefined,
                "url": undefined,
              },
              "type": "number",
            },
            {
              "docs": [],
              "id": "Interface001.y",
              "isOptional": false,
              "isReadonly": true,
              "kind": "InterfacePropertyDeclaration",
              "name": "y",
              "signature": "readonly y: number;",
              "source": {
                "filename": "interfaces.ts",
                "line": 6,
                "unpkgURL": undefined,
                "url": undefined,
              },
              "type": "number",
            },
          ],
        },
        "name": "Interface001",
        "signature": "interface Interface001 {}",
        "source": {
          "filename": "interfaces.ts",
          "line": 4,
          "unpkgURL": undefined,
          "url": undefined,
        },
      },
      {
        "docs": [],
        "id": "Interface002",
        "kind": "InterfaceDeclaration",
        "members": {
          "callSignatures": [],
          "constructSignatures": [],
          "indexSignatures": [],
          "methods": [],
          "properties": [
            {
              "docs": [],
              "id": "Interface002.z",
              "isOptional": true,
              "isReadonly": false,
              "kind": "InterfacePropertyDeclaration",
              "name": "z",
              "signature": "z?: number;",
              "source": {
                "filename": "interfaces.ts",
                "line": 10,
                "unpkgURL": undefined,
                "url": undefined,
              },
              "type": "number",
            },
          ],
        },
        "name": "Interface002",
        "signature": "interface Interface002 extends Interface001 {}",
        "source": {
          "filename": "interfaces.ts",
          "line": 9,
          "unpkgURL": undefined,
          "url": undefined,
        },
      },
      {
        "docs": [],
        "id": "Interface003",
        "kind": "InterfaceDeclaration",
        "members": {
          "callSignatures": [],
          "constructSignatures": [],
          "indexSignatures": [],
          "methods": [],
          "properties": [],
        },
        "name": "Interface003",
        "signature": "interface Interface003 extends Interface001, Interface002 {}",
        "source": {
          "filename": "interfaces.ts",
          "line": 13,
          "unpkgURL": undefined,
          "url": undefined,
        },
      },
      {
        "docs": [],
        "id": "Interface004",
        "kind": "InterfaceDeclaration",
        "members": {
          "callSignatures": [
            {
              "docs": [],
              "id": "Interface004.0-call-signature",
              "kind": "InterfaceCallSignatureDeclaration",
              "name": "call signature",
              "signature": "(a: string): string;",
              "source": {
                "filename": "interfaces.ts",
                "line": 16,
                "unpkgURL": undefined,
                "url": undefined,
              },
            },
          ],
          "constructSignatures": [],
          "indexSignatures": [],
          "methods": [],
          "properties": [],
        },
        "name": "Interface004",
        "signature": "interface Interface004 {}",
        "source": {
          "filename": "interfaces.ts",
          "line": 15,
          "unpkgURL": undefined,
          "url": undefined,
        },
      },
      {
        "docs": [],
        "id": "Interface005",
        "kind": "InterfaceDeclaration",
        "members": {
          "callSignatures": [],
          "constructSignatures": [],
          "indexSignatures": [
            {
              "docs": [],
              "id": "Interface005.0-index-signature",
              "kind": "InterfaceIndexSignatureDeclaration",
              "name": "index signature",
              "signature": "readonly [index: string]: number | string;",
              "source": {
                "filename": "interfaces.ts",
                "line": 20,
                "unpkgURL": undefined,
                "url": undefined,
              },
            },
          ],
          "methods": [],
          "properties": [],
        },
        "name": "Interface005",
        "signature": "interface Interface005 {}",
        "source": {
          "filename": "interfaces.ts",
          "line": 19,
          "unpkgURL": undefined,
          "url": undefined,
        },
      },
      {
        "docs": [],
        "id": "Interface006",
        "kind": "InterfaceDeclaration",
        "members": {
          "callSignatures": [],
          "constructSignatures": [],
          "indexSignatures": [],
          "methods": [
            {
              "docs": [],
              "id": "Interface006.getAny",
              "kind": "InterfaceMethodDeclaration",
              "name": "getAny",
              "signature": "getAny: () => any;",
              "source": {
                "filename": "interfaces.ts",
                "line": 25,
                "unpkgURL": undefined,
                "url": undefined,
              },
              "type": "() => any",
            },
          ],
          "properties": [
            {
              "docs": [],
              "id": "Interface006.something",
              "isOptional": false,
              "isReadonly": false,
              "kind": "InterfacePropertyDeclaration",
              "name": "something",
              "signature": "something: any;",
              "source": {
                "filename": "interfaces.ts",
                "line": 24,
                "unpkgURL": undefined,
                "url": undefined,
              },
              "type": "any",
            },
          ],
        },
        "name": "Interface006",
        "signature": "interface Interface006 {}",
        "source": {
          "filename": "interfaces.ts",
          "line": 23,
          "unpkgURL": undefined,
          "url": undefined,
        },
      },
      {
        "docs": [],
        "id": "Interface007",
        "kind": "InterfaceDeclaration",
        "members": {
          "callSignatures": [],
          "constructSignatures": [
            {
              "docs": [],
              "id": "Interface007.0-construct-signature",
              "kind": "InterfaceConstructSignatureDeclaration",
              "name": "construct signature",
              "signature": "new (): Interface006;",
              "source": {
                "filename": "interfaces.ts",
                "line": 29,
                "unpkgURL": undefined,
                "url": undefined,
              },
            },
          ],
          "indexSignatures": [],
          "methods": [],
          "properties": [],
        },
        "name": "Interface007",
        "signature": "interface Interface007 {}",
        "source": {
          "filename": "interfaces.ts",
          "line": 28,
          "unpkgURL": undefined,
          "url": undefined,
        },
      },
      {
        "docs": [],
        "id": "Interface008",
        "kind": "InterfaceDeclaration",
        "members": {
          "callSignatures": [],
          "constructSignatures": [],
          "indexSignatures": [],
          "methods": [],
          "properties": [],
        },
        "name": "Interface008",
        "signature": "interface Interface008<T> {}",
        "source": {
          "filename": "interfaces.ts",
          "line": 34,
          "unpkgURL": undefined,
          "url": undefined,
        },
      },
      {
        "docs": [],
        "id": "Interface009",
        "kind": "InterfaceDeclaration",
        "members": {
          "callSignatures": [],
          "constructSignatures": [],
          "indexSignatures": [],
          "methods": [],
          "properties": [],
        },
        "name": "Interface009",
        "signature": "interface Interface009<T extends object, U, V extends keyof T>
    extends Interface001,
        Interface002 {}",
        "source": {
          "filename": "interfaces.ts",
          "line": 36,
          "unpkgURL": undefined,
          "url": undefined,
        },
      },
      {
        "docs": [],
        "id": "Interface011",
        "kind": "InterfaceDeclaration",
        "members": {
          "callSignatures": [],
          "constructSignatures": [],
          "indexSignatures": [],
          "methods": [],
          "properties": [
            {
              "docs": [],
              "id": "Interface011.baz",
              "isOptional": false,
              "isReadonly": false,
              "kind": "InterfacePropertyDeclaration",
              "name": "baz",
              "signature": "baz: boolean;",
              "source": {
                "filename": "interfaces.ts",
                "line": 49,
                "unpkgURL": undefined,
                "url": undefined,
              },
              "type": "boolean",
            },
            {
              "docs": [],
              "id": "Interface011.foo",
              "isOptional": false,
              "isReadonly": false,
              "kind": "InterfacePropertyDeclaration",
              "name": "foo",
              "signature": "foo: string;",
              "source": {
                "filename": "interfaces.ts",
                "line": 44,
                "unpkgURL": undefined,
                "url": undefined,
              },
              "type": "string",
            },
          ],
        },
        "name": "Interface011",
        "signature": "interface Interface011 {}",
        "source": {
          "filename": "interfaces.ts",
          "line": 43,
          "unpkgURL": undefined,
          "url": undefined,
        },
      },
      {
        "docs": [],
        "id": "Interface012",
        "kind": "InterfaceDeclaration",
        "members": {
          "callSignatures": [],
          "constructSignatures": [],
          "indexSignatures": [],
          "methods": [
            {
              "docs": [],
              "id": "Interface012.foo",
              "kind": "InterfaceMethodDeclaration",
              "name": "foo",
              "signature": "foo: (a: number) => string;",
              "source": {
                "filename": "interfaces.ts",
                "line": 53,
                "unpkgURL": undefined,
                "url": undefined,
              },
              "type": "(a: number) => string",
            },
          ],
          "properties": [],
        },
        "name": "Interface012",
        "signature": "interface Interface012 {}",
        "source": {
          "filename": "interfaces.ts",
          "line": 52,
          "unpkgURL": undefined,
          "url": undefined,
        },
      },
    ],
    "namespaces": [
      {
        "declarations": {
          "classes": [],
          "enums": [],
          "functions": [],
          "interfaces": [],
          "namespaces": [],
          "typeAliases": [],
          "variables": [],
        },
        "docs": [
          "/**
 * Namespace1.
 */",
        ],
        "id": "Namespace1",
        "kind": "NamespaceDeclaration",
        "name": "Namespace1",
        "signature": "namespace Namespace1 {}",
        "source": {
          "filename": "namespaces.ts",
          "line": 4,
          "unpkgURL": undefined,
          "url": undefined,
        },
      },
      {
        "declarations": {
          "classes": [],
          "enums": [],
          "functions": [],
          "interfaces": [],
          "namespaces": [
            {
              "declarations": {
                "classes": [],
                "enums": [],
                "functions": [],
                "interfaces": [],
                "namespaces": [
                  {
                    "declarations": {
                      "classes": [],
                      "enums": [],
                      "functions": [],
                      "interfaces": [],
                      "namespaces": [],
                      "typeAliases": [],
                      "variables": [],
                    },
                    "docs": [],
                    "id": "Namespace2.Namespace21.Namespace22",
                    "kind": "NamespaceDeclaration",
                    "name": "Namespace2.Namespace21.Namespace22",
                    "signature": "namespace Namespace2.Namespace21.Namespace22 {}",
                    "source": {
                      "filename": "namespaces.ts",
                      "line": 13,
                      "unpkgURL": undefined,
                      "url": undefined,
                    },
                  },
                ],
                "typeAliases": [],
                "variables": [
                  {
                    "docs": [],
                    "id": "Namespace2.Namespace21.var2",
                    "kind": "VariableDeclaration",
                    "name": "var2",
                    "signature": "const var2: string;",
                    "source": {
                      "filename": "namespaces.ts",
                      "line": 11,
                      "unpkgURL": undefined,
                      "url": undefined,
                    },
                    "type": "string",
                    "variableKind": "const",
                  },
                ],
              },
              "docs": [],
              "id": "Namespace2.Namespace21",
              "kind": "NamespaceDeclaration",
              "name": "Namespace2.Namespace21",
              "signature": "namespace Namespace2.Namespace21 {}",
              "source": {
                "filename": "namespaces.ts",
                "line": 10,
                "unpkgURL": undefined,
                "url": undefined,
              },
            },
          ],
          "typeAliases": [],
          "variables": [
            {
              "docs": [
                "/** Var1 */",
              ],
              "id": "Namespace2.var1",
              "kind": "VariableDeclaration",
              "name": "var1",
              "signature": "const var1: number;",
              "source": {
                "filename": "namespaces.ts",
                "line": 8,
                "unpkgURL": undefined,
                "url": undefined,
              },
              "type": "number",
              "variableKind": "const",
            },
          ],
        },
        "docs": [],
        "id": "Namespace2",
        "kind": "NamespaceDeclaration",
        "name": "Namespace2",
        "signature": "namespace Namespace2 {}",
        "source": {
          "filename": "namespaces.ts",
          "line": 6,
          "unpkgURL": undefined,
          "url": undefined,
        },
      },
      {
        "declarations": {
          "classes": [],
          "enums": [],
          "functions": [],
          "interfaces": [],
          "namespaces": [],
          "typeAliases": [],
          "variables": [
            {
              "docs": [],
              "id": "Namespace3.var1",
              "kind": "VariableDeclaration",
              "name": "var1",
              "signature": "const var1: number;",
              "source": {
                "filename": "namespaces.ts",
                "line": 18,
                "unpkgURL": undefined,
                "url": undefined,
              },
              "type": "number",
              "variableKind": "const",
            },
            {
              "docs": [],
              "id": "Namespace3.var2",
              "kind": "VariableDeclaration",
              "name": "var2",
              "signature": "const var2: string;",
              "source": {
                "filename": "namespaces.ts",
                "line": 22,
                "unpkgURL": undefined,
                "url": undefined,
              },
              "type": "string",
              "variableKind": "const",
            },
          ],
        },
        "docs": [],
        "id": "Namespace3",
        "kind": "NamespaceDeclaration",
        "name": "Namespace3",
        "signature": "namespace Namespace3 {}",
        "source": {
          "filename": "namespaces.ts",
          "line": 17,
          "unpkgURL": undefined,
          "url": undefined,
        },
      },
    ],
    "typeAliases": [
      {
        "docs": [
          "/**
 * TypeAlias1 aliases a function.
 */",
        ],
        "id": "TypeAlias1",
        "kind": "TypeAliasDeclaration",
        "name": "TypeAlias1",
        "signature": "type TypeAlias1 = () => any;",
        "source": {
          "filename": "type-aliases.ts",
          "line": 4,
          "unpkgURL": undefined,
          "url": undefined,
        },
      },
      {
        "docs": [],
        "id": "TypeAlias2",
        "kind": "TypeAliasDeclaration",
        "name": "TypeAlias2",
        "signature": "type TypeAlias2 = string;",
        "source": {
          "filename": "type-aliases.ts",
          "line": 6,
          "unpkgURL": undefined,
          "url": undefined,
        },
      },
      {
        "docs": [],
        "id": "TypeAlias3",
        "kind": "TypeAliasDeclaration",
        "name": "TypeAlias3",
        "signature": "type TypeAlias3 = number | string;",
        "source": {
          "filename": "type-aliases.ts",
          "line": 8,
          "unpkgURL": undefined,
          "url": undefined,
        },
      },
    ],
    "variables": [
      {
        "docs": [
          "/**
 * This is var1.
 */",
        ],
        "id": "var1",
        "kind": "VariableDeclaration",
        "name": "var1",
        "signature": "const var1: string;",
        "source": {
          "filename": "variables.ts",
          "line": 8,
          "unpkgURL": undefined,
          "url": undefined,
        },
        "type": "string",
        "variableKind": "const",
      },
      {
        "docs": [],
        "id": "var2",
        "kind": "VariableDeclaration",
        "name": "var2",
        "signature": "let var2: number;",
        "source": {
          "filename": "variables.ts",
          "line": 10,
          "unpkgURL": undefined,
          "url": undefined,
        },
        "type": "number",
        "variableKind": "let",
      },
      {
        "docs": [],
        "id": "var3",
        "kind": "VariableDeclaration",
        "name": "var3",
        "signature": "var var3: (string | number)[];",
        "source": {
          "filename": "variables.ts",
          "line": 12,
          "unpkgURL": undefined,
          "url": undefined,
        },
        "type": "(string | number)[]",
        "variableKind": "var",
      },
      {
        "docs": [],
        "id": "var4",
        "kind": "VariableDeclaration",
        "name": "var4",
        "signature": "const var4: string;",
        "source": {
          "filename": "variables.ts",
          "line": 3,
          "unpkgURL": undefined,
          "url": undefined,
        },
        "type": "string",
        "variableKind": "const",
      },
      {
        "docs": [],
        "id": "var6",
        "kind": "VariableDeclaration",
        "name": "var6",
        "signature": "const var6: SomeType;",
        "source": {
          "filename": "variables.ts",
          "line": 21,
          "unpkgURL": undefined,
          "url": undefined,
        },
        "type": "SomeType",
        "variableKind": "const",
      },
      {
        "docs": [],
        "id": "var7",
        "kind": "VariableDeclaration",
        "name": "var7",
        "signature": "let var7: string;",
        "source": {
          "filename": "variables.ts",
          "line": 23,
          "unpkgURL": undefined,
          "url": undefined,
        },
        "type": "string",
        "variableKind": "let",
      },
    ],
  },
  "files": [
    {
      "filename": "classes.ts",
      "unpkgURL": undefined,
      "url": undefined,
    },
    {
      "filename": "enums.ts",
      "unpkgURL": undefined,
      "url": undefined,
    },
    {
      "filename": "functions.ts",
      "unpkgURL": undefined,
      "url": undefined,
    },
    {
      "filename": "index.ts",
      "isIndexFile": true,
      "unpkgURL": undefined,
      "url": undefined,
    },
    {
      "filename": "interfaces.ts",
      "unpkgURL": undefined,
      "url": undefined,
    },
    {
      "filename": "namespaces.ts",
      "unpkgURL": undefined,
      "url": undefined,
    },
    {
      "filename": "type-aliases.ts",
      "unpkgURL": undefined,
      "url": undefined,
    },
    {
      "filename": "variables.ts",
      "unpkgURL": undefined,
      "url": undefined,
    },
  ],
  "overview": "/**
 * This is the overview.
 *
 * @packageDocumentation
 */",
}
`;

exports[`export-named-declarations with repository snapshot 1`] = `
{
  "declarations": {
    "classes": [
      {
        "constructors": [],
        "docs": [
          "/**
 * Class001
 */",
        ],
        "id": "Class001",
        "isAbstract": false,
        "kind": "ClassDeclaration",
        "members": {
          "methods": [],
          "properties": [],
        },
        "name": "Class001",
        "signature": "class Class001 {}",
        "source": {
          "filename": "classes.ts",
          "line": 4,
          "unpkgURL": undefined,
          "url": "https://github.com/test/repo/tree/HEAD/classes.ts#L4",
        },
      },
      {
        "constructors": [],
        "docs": [],
        "id": "Class002",
        "isAbstract": false,
        "kind": "ClassDeclaration",
        "members": {
          "methods": [],
          "properties": [],
        },
        "name": "Class002",
        "signature": "class Class002 extends Class001 {}",
        "source": {
          "filename": "classes.ts",
          "line": 6,
          "unpkgURL": undefined,
          "url": "https://github.com/test/repo/tree/HEAD/classes.ts#L6",
        },
      },
      {
        "constructors": [],
        "docs": [],
        "id": "Class003",
        "isAbstract": true,
        "kind": "ClassDeclaration",
        "members": {
          "methods": [],
          "properties": [],
        },
        "name": "Class003",
        "signature": "abstract class Class003 {}",
        "source": {
          "filename": "classes.ts",
          "line": 8,
          "unpkgURL": undefined,
          "url": "https://github.com/test/repo/tree/HEAD/classes.ts#L8",
        },
      },
      {
        "constructors": [],
        "docs": [],
        "id": "Class004",
        "isAbstract": false,
        "kind": "ClassDeclaration",
        "members": {
          "methods": [],
          "properties": [],
        },
        "name": "Class004",
        "signature": "class Class004 implements A, B {}",
        "source": {
          "filename": "classes.ts",
          "line": 13,
          "unpkgURL": undefined,
          "url": "https://github.com/test/repo/tree/HEAD/classes.ts#L13",
        },
      },
      {
        "constructors": [],
        "docs": [],
        "id": "Class005",
        "isAbstract": false,
        "kind": "ClassDeclaration",
        "members": {
          "methods": [],
          "properties": [],
        },
        "name": "Class005",
        "signature": "class Class005 extends Class003 implements A, B {}",
        "source": {
          "filename": "classes.ts",
          "line": 15,
          "unpkgURL": undefined,
          "url": "https://github.com/test/repo/tree/HEAD/classes.ts#L15",
        },
      },
      {
        "constructors": [],
        "docs": [],
        "id": "Class006",
        "isAbstract": false,
        "kind": "ClassDeclaration",
        "members": {
          "methods": [],
          "properties": [],
        },
        "name": "Class006",
        "signature": "class Class006<T> {}",
        "source": {
          "filename": "classes.ts",
          "line": 18,
          "unpkgURL": undefined,
          "url": "https://github.com/test/repo/tree/HEAD/classes.ts#L18",
        },
      },
      {
        "constructors": [],
        "docs": [],
        "id": "Class007",
        "isAbstract": false,
        "kind": "ClassDeclaration",
        "members": {
          "methods": [],
          "properties": [],
        },
        "name": "Class007",
        "signature": "class Class007<T extends object, U, V extends keyof T>
    extends Class003
    implements A, B {}",
        "source": {
          "filename": "classes.ts",
          "line": 20,
          "unpkgURL": undefined,
          "url": "https://github.com/test/repo/tree/HEAD/classes.ts#L20",
        },
      },
      {
        "constructors": [
          {
            "docs": [
              "/** Constructor */",
            ],
            "id": "Class008.0-constructor",
            "kind": "ClassConstructorDeclaration",
            "name": "constructor",
            "signature": "constructor(foo: any, bar: any);",
            "source": {
              "filename": "classes.ts",
              "line": 25,
              "unpkgURL": undefined,
              "url": "https://github.com/test/repo/tree/HEAD/classes.ts#L25",
            },
          },
          {
            "docs": [],
            "id": "Class008.1-constructor",
            "kind": "ClassConstructorDeclaration",
            "name": "constructor",
            "signature": "constructor(foo: string, bar: number);",
            "source": {
              "filename": "classes.ts",
              "line": 26,
              "unpkgURL": undefined,
              "url": "https://github.com/test/repo/tree/HEAD/classes.ts#L26",
            },
          },
        ],
        "docs": [],
        "id": "Class008",
        "isAbstract": false,
        "kind": "ClassDeclaration",
        "members": {
          "methods": [],
          "properties": [],
        },
        "name": "Class008",
        "signature": "class Class008 {}",
        "source": {
          "filename": "classes.ts",
          "line": 23,
          "unpkgURL": undefined,
          "url": "https://github.com/test/repo/tree/HEAD/classes.ts#L23",
        },
      },
      {
        "constructors": [
          {
            "docs": [],
            "id": "Class009.0-constructor",
            "kind": "ClassConstructorDeclaration",
            "name": "constructor",
            "signature": "protected constructor(foo: string, bar: number);",
            "source": {
              "filename": "classes.ts",
              "line": 33,
              "unpkgURL": undefined,
              "url": "https://github.com/test/repo/tree/HEAD/classes.ts#L33",
            },
          },
        ],
        "docs": [],
        "id": "Class009",
        "isAbstract": false,
        "kind": "ClassDeclaration",
        "members": {
          "methods": [],
          "properties": [],
        },
        "name": "Class009",
        "signature": "class Class009 {}",
        "source": {
          "filename": "classes.ts",
          "line": 32,
          "unpkgURL": undefined,
          "url": "https://github.com/test/repo/tree/HEAD/classes.ts#L32",
        },
      },
      {
        "constructors": [],
        "docs": [],
        "id": "Class010",
        "isAbstract": false,
        "kind": "ClassDeclaration",
        "members": {
          "methods": [],
          "properties": [],
        },
        "name": "Class010",
        "signature": "class Class010 {}",
        "source": {
          "filename": "classes.ts",
          "line": 39,
          "unpkgURL": undefined,
          "url": "https://github.com/test/repo/tree/HEAD/classes.ts#L39",
        },
      },
      {
        "constructors": [],
        "docs": [],
        "id": "Class011",
        "isAbstract": false,
        "kind": "ClassDeclaration",
        "members": {
          "methods": [
            {
              "docs": [
                "/** Bar */",
              ],
              "id": "Class011.bar",
              "isStatic": true,
              "kind": "ClassMethodDeclaration",
              "name": "bar",
              "signature": "static bar: () => number;",
              "source": {
                "filename": "classes.ts",
                "line": 53,
                "unpkgURL": undefined,
                "url": "https://github.com/test/repo/tree/HEAD/classes.ts#L53",
              },
              "type": "() => number",
            },
          ],
          "properties": [
            {
              "docs": [
                "/** Get bat */",
              ],
              "id": "Class011.bat",
              "isStatic": true,
              "kind": "ClassPropertyDeclaration",
              "name": "bat",
              "signature": "static readonly bat: string;",
              "source": {
                "filename": "classes.ts",
                "line": 69,
                "unpkgURL": undefined,
                "url": "https://github.com/test/repo/tree/HEAD/classes.ts#L69",
              },
              "type": "string",
            },
            {
              "docs": [
                "/** Get baz */",
              ],
              "id": "Class011.baz",
              "isStatic": true,
              "kind": "ClassPropertyDeclaration",
              "name": "baz",
              "signature": "static baz: number;",
              "source": {
                "filename": "classes.ts",
                "line": 58,
                "unpkgURL": undefined,
                "url": "https://github.com/test/repo/tree/HEAD/classes.ts#L58",
              },
              "type": "number",
            },
            {
              "docs": [
                "/** Foo */",
              ],
              "id": "Class011.foo",
              "isStatic": true,
              "kind": "ClassPropertyDeclaration",
              "name": "foo",
              "signature": "static readonly foo: string;",
              "source": {
                "filename": "classes.ts",
                "line": 50,
                "unpkgURL": undefined,
                "url": "https://github.com/test/repo/tree/HEAD/classes.ts#L50",
              },
              "type": "string",
            },
          ],
        },
        "name": "Class011",
        "signature": "class Class011 {}",
        "source": {
          "filename": "classes.ts",
          "line": 46,
          "unpkgURL": undefined,
          "url": "https://github.com/test/repo/tree/HEAD/classes.ts#L46",
        },
      },
      {
        "constructors": [],
        "docs": [],
        "id": "Class012",
        "isAbstract": false,
        "kind": "ClassDeclaration",
        "members": {
          "methods": [
            {
              "docs": [
                "/** Bar */",
              ],
              "id": "Class012.bar",
              "isStatic": false,
              "kind": "ClassMethodDeclaration",
              "name": "bar",
              "signature": "bar: () => number;",
              "source": {
                "filename": "classes.ts",
                "line": 84,
                "unpkgURL": undefined,
                "url": "https://github.com/test/repo/tree/HEAD/classes.ts#L84",
              },
              "type": "() => number",
            },
          ],
          "properties": [
            {
              "docs": [
                "/** Get bat */",
              ],
              "id": "Class012.bat",
              "isStatic": false,
              "kind": "ClassPropertyDeclaration",
              "name": "bat",
              "signature": "readonly bat: string;",
              "source": {
                "filename": "classes.ts",
                "line": 100,
                "unpkgURL": undefined,
                "url": "https://github.com/test/repo/tree/HEAD/classes.ts#L100",
              },
              "type": "string",
            },
            {
              "docs": [
                "/** Get baz */",
              ],
              "id": "Class012.baz",
              "isStatic": false,
              "kind": "ClassPropertyDeclaration",
              "name": "baz",
              "signature": "baz: number;",
              "source": {
                "filename": "classes.ts",
                "line": 89,
                "unpkgURL": undefined,
                "url": "https://github.com/test/repo/tree/HEAD/classes.ts#L89",
              },
              "type": "number",
            },
            {
              "docs": [
                "/** Foo */",
              ],
              "id": "Class012.foo",
              "isStatic": false,
              "kind": "ClassPropertyDeclaration",
              "name": "foo",
              "signature": "readonly foo: string;",
              "source": {
                "filename": "classes.ts",
                "line": 78,
                "unpkgURL": undefined,
                "url": "https://github.com/test/repo/tree/HEAD/classes.ts#L78",
              },
              "type": "string",
            },
            {
              "docs": [
                "/** Foobar */",
              ],
              "id": "Class012.foobar",
              "isStatic": false,
              "kind": "ClassPropertyDeclaration",
              "name": "foobar",
              "signature": "foobar?: string;",
              "source": {
                "filename": "classes.ts",
                "line": 81,
                "unpkgURL": undefined,
                "url": "https://github.com/test/repo/tree/HEAD/classes.ts#L81",
              },
              "type": "string",
            },
          ],
        },
        "name": "Class012",
        "signature": "class Class012 {}",
        "source": {
          "filename": "classes.ts",
          "line": 74,
          "unpkgURL": undefined,
          "url": "https://github.com/test/repo/tree/HEAD/classes.ts#L74",
        },
      },
      {
        "constructors": [
          {
            "docs": [],
            "id": "Class013.0-constructor",
            "kind": "ClassConstructorDeclaration",
            "name": "constructor",
            "signature": "constructor(
    foo?: string,
    bar: string,
    baz: string,
    qux: string,
    ...rest: number[]
);",
            "source": {
              "filename": "classes.ts",
              "line": 106,
              "unpkgURL": undefined,
              "url": "https://github.com/test/repo/tree/HEAD/classes.ts#L106",
            },
          },
        ],
        "docs": [],
        "id": "Class013",
        "isAbstract": false,
        "kind": "ClassDeclaration",
        "members": {
          "methods": [],
          "properties": [
            {
              "docs": [
                "/** Bar */",
              ],
              "id": "Class013.bar",
              "isStatic": false,
              "kind": "ClassPropertyDeclaration",
              "name": "bar",
              "signature": "protected readonly bar: string;",
              "source": {
                "filename": "classes.ts",
                "line": 110,
                "unpkgURL": undefined,
                "url": "https://github.com/test/repo/tree/HEAD/classes.ts#L110",
              },
              "type": "string",
            },
            {
              "docs": [
                "/** Foo */",
              ],
              "id": "Class013.foo",
              "isStatic": false,
              "kind": "ClassPropertyDeclaration",
              "name": "foo",
              "signature": "readonly foo: string;",
              "source": {
                "filename": "classes.ts",
                "line": 108,
                "unpkgURL": undefined,
                "url": "https://github.com/test/repo/tree/HEAD/classes.ts#L108",
              },
              "type": "string",
            },
          ],
        },
        "name": "Class013",
        "signature": "class Class013 {}",
        "source": {
          "filename": "classes.ts",
          "line": 105,
          "unpkgURL": undefined,
          "url": "https://github.com/test/repo/tree/HEAD/classes.ts#L105",
        },
      },
      {
        "constructors": [],
        "docs": [],
        "id": "Class014",
        "isAbstract": true,
        "kind": "ClassDeclaration",
        "members": {
          "methods": [
            {
              "docs": [
                "/** Baz */",
              ],
              "id": "Class014.baz",
              "isStatic": false,
              "kind": "ClassMethodDeclaration",
              "name": "baz",
              "signature": "abstract baz: () => number;",
              "source": {
                "filename": "classes.ts",
                "line": 125,
                "unpkgURL": undefined,
                "url": "https://github.com/test/repo/tree/HEAD/classes.ts#L125",
              },
              "type": "() => number",
            },
          ],
          "properties": [
            {
              "docs": [
                "/** Bar */",
              ],
              "id": "Class014.bar",
              "isStatic": false,
              "kind": "ClassPropertyDeclaration",
              "name": "bar",
              "signature": "protected abstract bar: string;",
              "source": {
                "filename": "classes.ts",
                "line": 122,
                "unpkgURL": undefined,
                "url": "https://github.com/test/repo/tree/HEAD/classes.ts#L122",
              },
              "type": "string",
            },
            {
              "docs": [
                "/** Foo */",
              ],
              "id": "Class014.foo",
              "isStatic": false,
              "kind": "ClassPropertyDeclaration",
              "name": "foo",
              "signature": "abstract foo: string;",
              "source": {
                "filename": "classes.ts",
                "line": 119,
                "unpkgURL": undefined,
                "url": "https://github.com/test/repo/tree/HEAD/classes.ts#L119",
              },
              "type": "string",
            },
          ],
        },
        "name": "Class014",
        "signature": "abstract class Class014 {}",
        "source": {
          "filename": "classes.ts",
          "line": 117,
          "unpkgURL": undefined,
          "url": "https://github.com/test/repo/tree/HEAD/classes.ts#L117",
        },
      },
      {
        "constructors": [],
        "docs": [],
        "id": "Class016",
        "isAbstract": false,
        "kind": "ClassDeclaration",
        "members": {
          "methods": [],
          "properties": [],
        },
        "name": "Class016",
        "signature": "class Class016 {}",
        "source": {
          "filename": "classes.ts",
          "line": 131,
          "unpkgURL": undefined,
          "url": "https://github.com/test/repo/tree/HEAD/classes.ts#L131",
        },
      },
    ],
    "enums": [
      {
        "docs": [
          "/**
 * Enum1
 */",
        ],
        "id": "Enum1",
        "isConst": true,
        "kind": "EnumDeclaration",
        "members": [
          {
            "docs": [],
            "id": "Enum1.No",
            "kind": "EnumMemberDeclaration",
            "name": "No",
            "signature": "No",
            "source": {
              "filename": "enums.ts",
              "line": 7,
              "unpkgURL": undefined,
              "url": "https://github.com/test/repo/tree/HEAD/enums.ts#L7",
            },
            "value": 1,
          },
          {
            "docs": [
              "/** Positive */",
            ],
            "id": "Enum1.Yes",
            "kind": "EnumMemberDeclaration",
            "name": "Yes",
            "signature": "Yes",
            "source": {
              "filename": "enums.ts",
              "line": 6,
              "unpkgURL": undefined,
              "url": "https://github.com/test/repo/tree/HEAD/enums.ts#L6",
            },
            "value": 0,
          },
        ],
        "name": "Enum1",
        "signature": "const enum Enum1 {
    Yes,
    No,
}",
        "source": {
          "filename": "enums.ts",
          "line": 4,
          "unpkgURL": undefined,
          "url": "https://github.com/test/repo/tree/HEAD/enums.ts#L4",
        },
      },
      {
        "docs": [],
        "id": "Enum2",
        "isConst": false,
        "kind": "EnumDeclaration",
        "members": [
          {
            "docs": [],
            "id": "Enum2.Ko",
            "kind": "EnumMemberDeclaration",
            "name": "Ko",
            "signature": "Ko",
            "source": {
              "filename": "enums.ts",
              "line": 12,
              "unpkgURL": undefined,
              "url": "https://github.com/test/repo/tree/HEAD/enums.ts#L12",
            },
            "value": 2,
          },
          {
            "docs": [],
            "id": "Enum2.Ok",
            "kind": "EnumMemberDeclaration",
            "name": "Ok",
            "signature": "Ok = 1",
            "source": {
              "filename": "enums.ts",
              "line": 11,
              "unpkgURL": undefined,
              "url": "https://github.com/test/repo/tree/HEAD/enums.ts#L11",
            },
            "value": 1,
          },
        ],
        "name": "Enum2",
        "signature": "enum Enum2 {
    Ok = 1,
    Ko,
}",
        "source": {
          "filename": "enums.ts",
          "line": 10,
          "unpkgURL": undefined,
          "url": "https://github.com/test/repo/tree/HEAD/enums.ts#L10",
        },
      },
      {
        "docs": [],
        "id": "Enum3",
        "isConst": false,
        "kind": "EnumDeclaration",
        "members": [
          {
            "docs": [],
            "id": "Enum3.A",
            "kind": "EnumMemberDeclaration",
            "name": "A",
            "signature": "A = 'A'",
            "source": {
              "filename": "enums.ts",
              "line": 16,
              "unpkgURL": undefined,
              "url": "https://github.com/test/repo/tree/HEAD/enums.ts#L16",
            },
            "value": "A",
          },
          {
            "docs": [],
            "id": "Enum3.B",
            "kind": "EnumMemberDeclaration",
            "name": "B",
            "signature": "B = 'B'",
            "source": {
              "filename": "enums.ts",
              "line": 17,
              "unpkgURL": undefined,
              "url": "https://github.com/test/repo/tree/HEAD/enums.ts#L17",
            },
            "value": "B",
          },
          {
            "docs": [],
            "id": "Enum3.C",
            "kind": "EnumMemberDeclaration",
            "name": "C",
            "signature": "C = 'C'",
            "source": {
              "filename": "enums.ts",
              "line": 18,
              "unpkgURL": undefined,
              "url": "https://github.com/test/repo/tree/HEAD/enums.ts#L18",
            },
            "value": "C",
          },
        ],
        "name": "Enum3",
        "signature": "enum Enum3 {
    A = 'A',
    B = 'B',
    C = 'C',
}",
        "source": {
          "filename": "enums.ts",
          "line": 15,
          "unpkgURL": undefined,
          "url": "https://github.com/test/repo/tree/HEAD/enums.ts#L15",
        },
      },
      {
        "docs": [],
        "id": "Enum4",
        "isConst": false,
        "kind": "EnumDeclaration",
        "members": [],
        "name": "Enum4",
        "signature": "enum Enum4 {}",
        "source": {
          "filename": "enums.ts",
          "line": 23,
          "unpkgURL": undefined,
          "url": "https://github.com/test/repo/tree/HEAD/enums.ts#L23",
        },
      },
      {
        "docs": [],
        "id": "Enum6",
        "isConst": false,
        "kind": "EnumDeclaration",
        "members": [
          {
            "docs": [],
            "id": "Enum6.A",
            "kind": "EnumMemberDeclaration",
            "name": "A",
            "signature": "A",
            "source": {
              "filename": "enums.ts",
              "line": 29,
              "unpkgURL": undefined,
              "url": "https://github.com/test/repo/tree/HEAD/enums.ts#L29",
            },
            "value": 0,
          },
        ],
        "name": "Enum6",
        "signature": "enum Enum6 {
    A,
}",
        "source": {
          "filename": "enums.ts",
          "line": 28,
          "unpkgURL": undefined,
          "url": "https://github.com/test/repo/tree/HEAD/enums.ts#L28",
        },
      },
    ],
    "functions": [
      {
        "docs": [
          "/**
 * Func1 returns the sum of two numbers.
 * @param a - the first number
 * @param b - the second number
 */",
        ],
        "id": "func1",
        "kind": "FunctionDeclaration",
        "name": "func1",
        "signature": "func1: (a: number, b: number) => number;",
        "source": {
          "filename": "functions.ts",
          "line": 6,
          "unpkgURL": undefined,
          "url": "https://github.com/test/repo/tree/HEAD/functions.ts#L6",
        },
        "type": "(a: number, b: number) => number",
      },
      {
        "docs": [
          "/**
 * Func2 returns the sum of two numbers.
 * @param a - the first number
 * @param b - the second number
 */",
        ],
        "id": "func2",
        "kind": "FunctionDeclaration",
        "name": "func2",
        "signature": "func2: ({ a, b }: { a: number; b: number }) => number;",
        "source": {
          "filename": "functions.ts",
          "line": 15,
          "unpkgURL": undefined,
          "url": "https://github.com/test/repo/tree/HEAD/functions.ts#L15",
        },
        "type": "({ a, b }: { a: number; b: number; }) => number",
      },
      {
        "docs": [
          "/**
 * Func3 returns the sum of two numbers.
 * @param a - the first number
 * @param b - the second number
 */",
        ],
        "id": "func3",
        "kind": "FunctionDeclaration",
        "name": "func3",
        "signature": "func3: ({ a, b }: { a: number; b: number }) => number;",
        "source": {
          "filename": "functions.ts",
          "line": 22,
          "unpkgURL": undefined,
          "url": "https://github.com/test/repo/tree/HEAD/functions.ts#L22",
        },
        "type": "({ a, b }: { a: number; b: number; }) => number",
      },
      {
        "docs": [
          "/**
 * Func4 is overloaded and returns its input.
 */",
        ],
        "id": "func4",
        "kind": "FunctionDeclaration",
        "name": "func4",
        "signature": "func4: { (a: number): number; (a: string): string };",
        "source": {
          "filename": "functions.ts",
          "line": 31,
          "unpkgURL": undefined,
          "url": "https://github.com/test/repo/tree/HEAD/functions.ts#L31",
        },
        "type": "{ (a: number): number; (a: string): string; }",
      },
      {
        "docs": [],
        "id": "func5",
        "kind": "FunctionDeclaration",
        "name": "func5",
        "signature": "func5: () => Promise<void>;",
        "source": {
          "filename": "functions.ts",
          "line": 37,
          "unpkgURL": undefined,
          "url": "https://github.com/test/repo/tree/HEAD/functions.ts#L37",
        },
        "type": "() => Promise<void>",
      },
      {
        "docs": [],
        "id": "func8",
        "kind": "FunctionDeclaration",
        "name": "func8",
        "signature": "func8: (a: string) => number;",
        "source": {
          "filename": "functions.ts",
          "line": 45,
          "unpkgURL": undefined,
          "url": "https://github.com/test/repo/tree/HEAD/functions.ts#L45",
        },
        "type": "(a: string) => number",
      },
    ],
    "interfaces": [
      {
        "docs": [
          "/**
 * Interface001
 */",
        ],
        "id": "Interface001",
        "kind": "InterfaceDeclaration",
        "members": {
          "callSignatures": [],
          "constructSignatures": [],
          "indexSignatures": [],
          "methods": [],
          "properties": [
            {
              "docs": [],
              "id": "Interface001.x",
              "isOptional": false,
              "isReadonly": true,
              "kind": "InterfacePropertyDeclaration",
              "name": "x",
              "signature": "readonly x: number;",
              "source": {
                "filename": "interfaces.ts",
                "line": 5,
                "unpkgURL": undefined,
                "url": "https://github.com/test/repo/tree/HEAD/interfaces.ts#L5",
              },
              "type": "number",
            },
            {
              "docs": [],
              "id": "Interface001.y",
              "isOptional": false,
              "isReadonly": true,
              "kind": "InterfacePropertyDeclaration",
              "name": "y",
              "signature": "readonly y: number;",
              "source": {
                "filename": "interfaces.ts",
                "line": 6,
                "unpkgURL": undefined,
                "url": "https://github.com/test/repo/tree/HEAD/interfaces.ts#L6",
              },
              "type": "number",
            },
          ],
        },
        "name": "Interface001",
        "signature": "interface Interface001 {}",
        "source": {
          "filename": "interfaces.ts",
          "line": 4,
          "unpkgURL": undefined,
          "url": "https://github.com/test/repo/tree/HEAD/interfaces.ts#L4",
        },
      },
      {
        "docs": [],
        "id": "Interface002",
        "kind": "InterfaceDeclaration",
        "members": {
          "callSignatures": [],
          "constructSignatures": [],
          "indexSignatures": [],
          "methods": [],
          "properties": [
            {
              "docs": [],
              "id": "Interface002.z",
              "isOptional": true,
              "isReadonly": false,
              "kind": "InterfacePropertyDeclaration",
              "name": "z",
              "signature": "z?: number;",
              "source": {
                "filename": "interfaces.ts",
                "line": 10,
                "unpkgURL": undefined,
                "url": "https://github.com/test/repo/tree/HEAD/interfaces.ts#L10",
              },
              "type": "number",
            },
          ],
        },
        "name": "Interface002",
        "signature": "interface Interface002 extends Interface001 {}",
        "source": {
          "filename": "interfaces.ts",
          "line": 9,
          "unpkgURL": undefined,
          "url": "https://github.com/test/repo/tree/HEAD/interfaces.ts#L9",
        },
      },
      {
        "docs": [],
        "id": "Interface003",
        "kind": "InterfaceDeclaration",
        "members": {
          "callSignatures": [],
          "constructSignatures": [],
          "indexSignatures": [],
          "methods": [],
          "properties": [],
        },
        "name": "Interface003",
        "signature": "interface Interface003 extends Interface001, Interface002 {}",
        "source": {
          "filename": "interfaces.ts",
          "line": 13,
          "unpkgURL": undefined,
          "url": "https://github.com/test/repo/tree/HEAD/interfaces.ts#L13",
        },
      },
      {
        "docs": [],
        "id": "Interface004",
        "kind": "InterfaceDeclaration",
        "members": {
          "callSignatures": [
            {
              "docs": [],
              "id": "Interface004.0-call-signature",
              "kind": "InterfaceCallSignatureDeclaration",
              "name": "call signature",
              "signature": "(a: string): string;",
              "source": {
                "filename": "interfaces.ts",
                "line": 16,
                "unpkgURL": undefined,
                "url": "https://github.com/test/repo/tree/HEAD/interfaces.ts#L16",
              },
            },
          ],
          "constructSignatures": [],
          "indexSignatures": [],
          "methods": [],
          "properties": [],
        },
        "name": "Interface004",
        "signature": "interface Interface004 {}",
        "source": {
          "filename": "interfaces.ts",
          "line": 15,
          "unpkgURL": undefined,
          "url": "https://github.com/test/repo/tree/HEAD/interfaces.ts#L15",
        },
      },
      {
        "docs": [],
        "id": "Interface005",
        "kind": "InterfaceDeclaration",
        "members": {
          "callSignatures": [],
          "constructSignatures": [],
          "indexSignatures": [
            {
              "docs": [],
              "id": "Interface005.0-index-signature",
              "kind": "InterfaceIndexSignatureDeclaration",
              "name": "index signature",
              "signature": "readonly [index: string]: number | string;",
              "source": {
                "filename": "interfaces.ts",
                "line": 20,
                "unpkgURL": undefined,
                "url": "https://github.com/test/repo/tree/HEAD/interfaces.ts#L20",
              },
            },
          ],
          "methods": [],
          "properties": [],
        },
        "name": "Interface005",
        "signature": "interface Interface005 {}",
        "source": {
          "filename": "interfaces.ts",
          "line": 19,
          "unpkgURL": undefined,
          "url": "https://github.com/test/repo/tree/HEAD/interfaces.ts#L19",
        },
      },
      {
        "docs": [],
        "id": "Interface006",
        "kind": "InterfaceDeclaration",
        "members": {
          "callSignatures": [],
          "constructSignatures": [],
          "indexSignatures": [],
          "methods": [
            {
              "docs": [],
              "id": "Interface006.getAny",
              "kind": "InterfaceMethodDeclaration",
              "name": "getAny",
              "signature": "getAny: () => any;",
              "source": {
                "filename": "interfaces.ts",
                "line": 25,
                "unpkgURL": undefined,
                "url": "https://github.com/test/repo/tree/HEAD/interfaces.ts#L25",
              },
              "type": "() => any",
            },
          ],
          "properties": [
            {
              "docs": [],
              "id": "Interface006.something",
              "isOptional": false,
              "isReadonly": false,
              "kind": "InterfacePropertyDeclaration",
              "name": "something",
              "signature": "something: any;",
              "source": {
                "filename": "interfaces.ts",
                "line": 24,
                "unpkgURL": undefined,
                "url": "https://github.com/test/repo/tree/HEAD/interfaces.ts#L24",
              },
              "type": "any",
            },
          ],
        },
        "name": "Interface006",
        "signature": "interface Interface006 {}",
        "source": {
          "filename": "interfaces.ts",
          "line": 23,
          "unpkgURL": undefined,
          "url": "https://github.com/test/repo/tree/HEAD/interfaces.ts#L23",
        },
      },
      {
        "docs": [],
        "id": "Interface007",
        "kind": "InterfaceDeclaration",
        "members": {
          "callSignatures": [],
          "constructSignatures": [
            {
              "docs": [],
              "id": "Interface007.0-construct-signature",
              "kind": "InterfaceConstructSignatureDeclaration",
              "name": "construct signature",
              "signature": "new (): Interface006;",
              "source": {
                "filename": "interfaces.ts",
                "line": 29,
                "unpkgURL": undefined,
                "url": "https://github.com/test/repo/tree/HEAD/interfaces.ts#L29",
              },
            },
          ],
          "indexSignatures": [],
          "methods": [],
          "properties": [],
        },
        "name": "Interface007",
        "signature": "interface Interface007 {}",
        "source": {
          "filename": "interfaces.ts",
          "line": 28,
          "unpkgURL": undefined,
          "url": "https://github.com/test/repo/tree/HEAD/interfaces.ts#L28",
        },
      },
      {
        "docs": [],
        "id": "Interface008",
        "kind": "InterfaceDeclaration",
        "members": {
          "callSignatures": [],
          "constructSignatures": [],
          "indexSignatures": [],
          "methods": [],
          "properties": [],
        },
        "name": "Interface008",
        "signature": "interface Interface008<T> {}",
        "source": {
          "filename": "interfaces.ts",
          "line": 34,
          "unpkgURL": undefined,
          "url": "https://github.com/test/repo/tree/HEAD/interfaces.ts#L34",
        },
      },
      {
        "docs": [],
        "id": "Interface009",
        "kind": "InterfaceDeclaration",
        "members": {
          "callSignatures": [],
          "constructSignatures": [],
          "indexSignatures": [],
          "methods": [],
          "properties": [],
        },
        "name": "Interface009",
        "signature": "interface Interface009<T extends object, U, V extends keyof T>
    extends Interface001,
        Interface002 {}",
        "source": {
          "filename": "interfaces.ts",
          "line": 36,
          "unpkgURL": undefined,
          "url": "https://github.com/test/repo/tree/HEAD/interfaces.ts#L36",
        },
      },
      {
        "docs": [],
        "id": "Interface011",
        "kind": "InterfaceDeclaration",
        "members": {
          "callSignatures": [],
          "constructSignatures": [],
          "indexSignatures": [],
          "methods": [],
          "properties": [
            {
              "docs": [],
              "id": "Interface011.baz",
              "isOptional": false,
              "isReadonly": false,
              "kind": "InterfacePropertyDeclaration",
              "name": "baz",
              "signature": "baz: boolean;",
              "source": {
                "filename": "interfaces.ts",
                "line": 49,
                "unpkgURL": undefined,
                "url": "https://github.com/test/repo/tree/HEAD/interfaces.ts#L49",
              },
              "type": "boolean",
            },
            {
              "docs": [],
              "id": "Interface011.foo",
              "isOptional": false,
              "isReadonly": false,
              "kind": "InterfacePropertyDeclaration",
              "name": "foo",
              "signature": "foo: string;",
              "source": {
                "filename": "interfaces.ts",
                "line": 44,
                "unpkgURL": undefined,
                "url": "https://github.com/test/repo/tree/HEAD/interfaces.ts#L44",
              },
              "type": "string",
            },
          ],
        },
        "name": "Interface011",
        "signature": "interface Interface011 {}",
        "source": {
          "filename": "interfaces.ts",
          "line": 43,
          "unpkgURL": undefined,
          "url": "https://github.com/test/repo/tree/HEAD/interfaces.ts#L43",
        },
      },
      {
        "docs": [],
        "id": "Interface012",
        "kind": "InterfaceDeclaration",
        "members": {
          "callSignatures": [],
          "constructSignatures": [],
          "indexSignatures": [],
          "methods": [
            {
              "docs": [],
              "id": "Interface012.foo",
              "kind": "InterfaceMethodDeclaration",
              "name": "foo",
              "signature": "foo: (a: number) => string;",
              "source": {
                "filename": "interfaces.ts",
                "line": 53,
                "unpkgURL": undefined,
                "url": "https://github.com/test/repo/tree/HEAD/interfaces.ts#L53",
              },
              "type": "(a: number) => string",
            },
          ],
          "properties": [],
        },
        "name": "Interface012",
        "signature": "interface Interface012 {}",
        "source": {
          "filename": "interfaces.ts",
          "line": 52,
          "unpkgURL": undefined,
          "url": "https://github.com/test/repo/tree/HEAD/interfaces.ts#L52",
        },
      },
    ],
    "namespaces": [
      {
        "declarations": {
          "classes": [],
          "enums": [],
          "functions": [],
          "interfaces": [],
          "namespaces": [],
          "typeAliases": [],
          "variables": [],
        },
        "docs": [
          "/**
 * Namespace1.
 */",
        ],
        "id": "Namespace1",
        "kind": "NamespaceDeclaration",
        "name": "Namespace1",
        "signature": "namespace Namespace1 {}",
        "source": {
          "filename": "namespaces.ts",
          "line": 4,
          "unpkgURL": undefined,
          "url": "https://github.com/test/repo/tree/HEAD/namespaces.ts#L4",
        },
      },
      {
        "declarations": {
          "classes": [],
          "enums": [],
          "functions": [],
          "interfaces": [],
          "namespaces": [
            {
              "declarations": {
                "classes": [],
                "enums": [],
                "functions": [],
                "interfaces": [],
                "namespaces": [
                  {
                    "declarations": {
                      "classes": [],
                      "enums": [],
                      "functions": [],
                      "interfaces": [],
                      "namespaces": [],
                      "typeAliases": [],
                      "variables": [],
                    },
                    "docs": [],
                    "id": "Namespace2.Namespace21.Namespace22",
                    "kind": "NamespaceDeclaration",
                    "name": "Namespace2.Namespace21.Namespace22",
                    "signature": "namespace Namespace2.Namespace21.Namespace22 {}",
                    "source": {
                      "filename": "namespaces.ts",
                      "line": 13,
                      "unpkgURL": undefined,
                      "url": "https://github.com/test/repo/tree/HEAD/namespaces.ts#L13",
                    },
                  },
                ],
                "typeAliases": [],
                "variables": [
                  {
                    "docs": [],
                    "id": "Namespace2.Namespace21.var2",
                    "kind": "VariableDeclaration",
                    "name": "var2",
                    "signature": "const var2: string;",
                    "source": {
                      "filename": "namespaces.ts",
                      "line": 11,
                      "unpkgURL": undefined,
                      "url": "https://github.com/test/repo/tree/HEAD/namespaces.ts#L11",
                    },
                    "type": "string",
                    "variableKind": "const",
                  },
                ],
              },
              "docs": [],
              "id": "Namespace2.Namespace21",
              "kind": "NamespaceDeclaration",
              "name": "Namespace2.Namespace21",
              "signature": "namespace Namespace2.Namespace21 {}",
              "source": {
                "filename": "namespaces.ts",
                "line": 10,
                "unpkgURL": undefined,
                "url": "https://github.com/test/repo/tree/HEAD/namespaces.ts#L10",
              },
            },
          ],
          "typeAliases": [],
          "variables": [
            {
              "docs": [
                "/** Var1 */",
              ],
              "id": "Namespace2.var1",
              "kind": "VariableDeclaration",
              "name": "var1",
              "signature": "const var1: number;",
              "source": {
                "filename": "namespaces.ts",
                "line": 8,
                "unpkgURL": undefined,
                "url": "https://github.com/test/repo/tree/HEAD/namespaces.ts#L8",
              },
              "type": "number",
              "variableKind": "const",
            },
          ],
        },
        "docs": [],
        "id": "Namespace2",
        "kind": "NamespaceDeclaration",
        "name": "Namespace2",
        "signature": "namespace Namespace2 {}",
        "source": {
          "filename": "namespaces.ts",
          "line": 6,
          "unpkgURL": undefined,
          "url": "https://github.com/test/repo/tree/HEAD/namespaces.ts#L6",
        },
      },
      {
        "declarations": {
          "classes": [],
          "enums": [],
          "functions": [],
          "interfaces": [],
          "namespaces": [],
          "typeAliases": [],
          "variables": [
            {
              "docs": [],
              "id": "Namespace3.var1",
              "kind": "VariableDeclaration",
              "name": "var1",
              "signature": "const var1: number;",
              "source": {
                "filename": "namespaces.ts",
                "line": 18,
                "unpkgURL": undefined,
                "url": "https://github.com/test/repo/tree/HEAD/namespaces.ts#L18",
              },
              "type": "number",
              "variableKind": "const",
            },
            {
              "docs": [],
              "id": "Namespace3.var2",
              "kind": "VariableDeclaration",
              "name": "var2",
              "signature": "const var2: string;",
              "source": {
                "filename": "namespaces.ts",
                "line": 22,
                "unpkgURL": undefined,
                "url": "https://github.com/test/repo/tree/HEAD/namespaces.ts#L22",
              },
              "type": "string",
              "variableKind": "const",
            },
          ],
        },
        "docs": [],
        "id": "Namespace3",
        "kind": "NamespaceDeclaration",
        "name": "Namespace3",
        "signature": "namespace Namespace3 {}",
        "source": {
          "filename": "namespaces.ts",
          "line": 17,
          "unpkgURL": undefined,
          "url": "https://github.com/test/repo/tree/HEAD/namespaces.ts#L17",
        },
      },
    ],
    "typeAliases": [
      {
        "docs": [
          "/**
 * TypeAlias1 aliases a function.
 */",
        ],
        "id": "TypeAlias1",
        "kind": "TypeAliasDeclaration",
        "name": "TypeAlias1",
        "signature": "type TypeAlias1 = () => any;",
        "source": {
          "filename": "type-aliases.ts",
          "line": 4,
          "unpkgURL": undefined,
          "url": "https://github.com/test/repo/tree/HEAD/type-aliases.ts#L4",
        },
      },
      {
        "docs": [],
        "id": "TypeAlias2",
        "kind": "TypeAliasDeclaration",
        "name": "TypeAlias2",
        "signature": "type TypeAlias2 = string;",
        "source": {
          "filename": "type-aliases.ts",
          "line": 6,
          "unpkgURL": undefined,
          "url": "https://github.com/test/repo/tree/HEAD/type-aliases.ts#L6",
        },
      },
      {
        "docs": [],
        "id": "TypeAlias3",
        "kind": "TypeAliasDeclaration",
        "name": "TypeAlias3",
        "signature": "type TypeAlias3 = number | string;",
        "source": {
          "filename": "type-aliases.ts",
          "line": 8,
          "unpkgURL": undefined,
          "url": "https://github.com/test/repo/tree/HEAD/type-aliases.ts#L8",
        },
      },
    ],
    "variables": [
      {
        "docs": [
          "/**
 * This is var1.
 */",
        ],
        "id": "var1",
        "kind": "VariableDeclaration",
        "name": "var1",
        "signature": "const var1: string;",
        "source": {
          "filename": "variables.ts",
          "line": 8,
          "unpkgURL": undefined,
          "url": "https://github.com/test/repo/tree/HEAD/variables.ts#L8",
        },
        "type": "string",
        "variableKind": "const",
      },
      {
        "docs": [],
        "id": "var2",
        "kind": "VariableDeclaration",
        "name": "var2",
        "signature": "let var2: number;",
        "source": {
          "filename": "variables.ts",
          "line": 10,
          "unpkgURL": undefined,
          "url": "https://github.com/test/repo/tree/HEAD/variables.ts#L10",
        },
        "type": "number",
        "variableKind": "let",
      },
      {
        "docs": [],
        "id": "var3",
        "kind": "VariableDeclaration",
        "name": "var3",
        "signature": "var var3: (string | number)[];",
        "source": {
          "filename": "variables.ts",
          "line": 12,
          "unpkgURL": undefined,
          "url": "https://github.com/test/repo/tree/HEAD/variables.ts#L12",
        },
        "type": "(string | number)[]",
        "variableKind": "var",
      },
      {
        "docs": [],
        "id": "var4",
        "kind": "VariableDeclaration",
        "name": "var4",
        "signature": "const var4: string;",
        "source": {
          "filename": "variables.ts",
          "line": 3,
          "unpkgURL": undefined,
          "url": "https://github.com/test/repo/tree/HEAD/variables.ts#L3",
        },
        "type": "string",
        "variableKind": "const",
      },
      {
        "docs": [],
        "id": "var6",
        "kind": "VariableDeclaration",
        "name": "var6",
        "signature": "const var6: SomeType;",
        "source": {
          "filename": "variables.ts",
          "line": 21,
          "unpkgURL": undefined,
          "url": "https://github.com/test/repo/tree/HEAD/variables.ts#L21",
        },
        "type": "SomeType",
        "variableKind": "const",
      },
      {
        "docs": [],
        "id": "var7",
        "kind": "VariableDeclaration",
        "name": "var7",
        "signature": "let var7: string;",
        "source": {
          "filename": "variables.ts",
          "line": 23,
          "unpkgURL": undefined,
          "url": "https://github.com/test/repo/tree/HEAD/variables.ts#L23",
        },
        "type": "string",
        "variableKind": "let",
      },
    ],
  },
  "files": [
    {
      "filename": "classes.ts",
      "unpkgURL": undefined,
      "url": "https://github.com/test/repo/tree/HEAD/classes.ts",
    },
    {
      "filename": "enums.ts",
      "unpkgURL": undefined,
      "url": "https://github.com/test/repo/tree/HEAD/enums.ts",
    },
    {
      "filename": "functions.ts",
      "unpkgURL": undefined,
      "url": "https://github.com/test/repo/tree/HEAD/functions.ts",
    },
    {
      "filename": "index.ts",
      "isIndexFile": true,
      "unpkgURL": undefined,
      "url": "https://github.com/test/repo/tree/HEAD/index.ts",
    },
    {
      "filename": "interfaces.ts",
      "unpkgURL": undefined,
      "url": "https://github.com/test/repo/tree/HEAD/interfaces.ts",
    },
    {
      "filename": "namespaces.ts",
      "unpkgURL": undefined,
      "url": "https://github.com/test/repo/tree/HEAD/namespaces.ts",
    },
    {
      "filename": "type-aliases.ts",
      "unpkgURL": undefined,
      "url": "https://github.com/test/repo/tree/HEAD/type-aliases.ts",
    },
    {
      "filename": "variables.ts",
      "unpkgURL": undefined,
      "url": "https://github.com/test/repo/tree/HEAD/variables.ts",
    },
  ],
  "overview": "/**
 * This is the overview.
 *
 * @packageDocumentation
 */",
}
`;
